# agito

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.runner  README.md  docker-compose.yml  go.mod
cmd/agito/: main.go
cmd/agito-server/: main.go
examples/: CICD.md  configuration.md
internal/git/: git.go
internal/server/: web.go
internal/ssh/: server.go
scripts/: runner.sh
src/: git.rs  lib.rs  ssh.rs  web.rs
web/templates/: index.html  repo.html
